--- a/Projects/vona-beauty.com.ua/styles/scss/_components.scss
+++ b/Projects/vona-beauty.com.ua/styles/scss/_components.scss
@@ -189,6 +189,9 @@
                         .item__buyBtn{
                             display: inline-block;
                         }
+                        .item__name{
+                            font-size: 15px;
+                        }
                     }
                 }
             }
